--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: setup go
         uses: actions/setup-go@v3
         with:
-          go-version: '1.19.0'
+          go-version-file: 'go.mod'
       - name: compile go examples
         run: |
           make build
